installed dependencies and made food_and_drinks table

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,12 @@ name = "pypi"
 
 [packages]
 ipdb = "*"
+pyinquirer = "*"
+prompt-toolkit = "*"
+sqlalchemy = "*"
+alembic = "*"
+click = "*"
+colorama = "*"
 
 [dev-packages]
 
